--- a/Services/Catalogue/Catalogue.Api/Properties/launchSettings.json
+++ b/Services/Catalogue/Catalogue.Api/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7259;http://localhost:5259"
+      "applicationUrl": "https://localhost:9001"
     },
     "IIS Express": {
       "commandName": "IISExpress",
